--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.1.0",
-    "@mui/icons-material": "^6.1.2",
+    "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.1.2",
     "@prisma/client": "^5.22.0",
+    "@vercel/blob": "^0.27.3",
     "next": "^14.2.15",
     "next-auth": "^4.24.10",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.54.2"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -29,6 +31,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
     "prisma": "^5.22.0",
+    "tsx": "^4.19.3",
     "typescript": "^5"
   }
 }
+
